[Users] Add cpu test endpoint (#53)
* :sparkles: New endpoint for cpu task
