# src/users/users.controller.ts
@@ -68,4 +68,36 @@ export class UsersController {
     console.log('store: ', store);
     return this.usersService.findUserById({ userId: store?.user.userId });
   }
+
+  @IgnoreAuth()
+  @TypedRoute.Get('/cpu')
+  async task() {
+    return getPrimes((Math.random() * 500000) * 5);
+  }
 }
+
+/* eslint-disable */
+function getPrimes(max: number) {
+  const start = Date.now();
+  const primes: number[] = [];
+
+  for (let i = 2; i <= max; i++) {
+    let isPrime = true;
+    for (let j = 2; j <= Math.sqrt(i); j++) {
+      if (i % j === 0) {
+        isPrime = false;
+        break;
+      }
+    }
+    if (isPrime) primes.push(i);
+  }
+
+  const end = Date.now();
+  const time = `${Math.floor((end - start) / 1000)} sec`;
+
+  return {
+    count: primes.length,
+    time,
+  };
+}
+/* eslint-disable */
